Revised specs for width/height in project box to prevent image distortion.

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -11055,11 +11055,17 @@ pre {
 
 .project-box {
   position: relative;
-  width: 100%;
-  height: 18.5rem;
+  min-width: 225px;
+  min-height: 150px;
   overflow: hidden;
   margin-bottom: 1.2rem;
   border-top: 0.5rem solid #1c1fbb;
+}
+@media (max-width: 767.98px) {
+  .project-box {
+    min-width: 150;
+    min-height: 100px;
+  }
 }
 .project-box img {
   width: 100%;
