--- a/src/scss/sections/_projects.scss
+++ b/src/scss/sections/_projects.scss
@@ -11,11 +11,16 @@
 
 .project-box {
   position: relative;
-  width: 100%;
-  height: 18.5rem;
+  min-width: 225px;
+  min-height: 150px;
   overflow: hidden;
   margin-bottom: 1.2rem;
   border-top: 0.5rem solid $primary;
+
+  @include media-breakpoint-down(md) {
+    min-width: 150;
+    min-height: 100px;
+  }
 
   img {
     width: 100%;
